# RobotsGame

./: .gitignore  CMakeLists.txt
SQL/: data_scheme.c  data_scheme.h  database.c  database.h
app_client/: client.c  client.cpp  client.h  game.c  game.h  interface.cpp  interface.h  intfc_classes.cpp  intfc_classes.h  main.c  main.cpp
app_client/src/: test_field  test_field.txt
app_server/: main.c  requests.c  requests.h  server.c  server.h
app_server/data/: login_db.txt
test_dir/: field.cpp  field.h  main.cpp  main2.cpp  test1.c
